crates/fundle_macros/src/snapshots/fundle_macros__deps__tests__generics.snap
---
source: crates/fundle_macros/src/deps.rs
expression: expand_fundle_deps!(item)
---
#[allow(private_bounds)]
struct Foo<T> {
    x: T,
}
#[allow(private_bounds)]
impl<T, __FundleFromT> ::std::convert::From<__FundleFromT> for Foo<T>
where
    __FundleFromT: ::std::convert::AsRef<T>,
{
    fn from(value: __FundleFromT) -> Self {
        Self {
            x: <__FundleFromT as ::std::convert::AsRef<T>>::as_ref(&value).to_owned(),
        }
    }
}
