crates/fundle_macros/src/snapshots/fundle_macros__deps__tests__union.snap
---
source: crates/fundle_macros/src/deps.rs
expression: expand_fundle_deps!(item)
---
::core::compile_error! {
    "expected `struct`"
}
